force-app/main/default/objects/ClusterJobNeighbor__c/ClusterJobNeighbor__c.object-meta.xml
<CustomObject>
    <label>Cluster Job Neighbor</label>
    <nameField>
        <displayFormat>CJN-{0000}</displayFormat>
        <label>Cluster Job Neighbor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster Job Neighbors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>