force-app/main/default/objects/ClusterJobNeighbor__c/fields/ClusterJob__c.field-meta.xml
<CustomField>
    <fullName>ClusterJob__c</fullName>
    <label>Cluster Job</label>
    <referenceTo>ClusterJob__c</referenceTo>
    <relationshipLabel>Cluster Job Nearest Neighbors</relationshipLabel>
    <relationshipName>ClusterJobNeighbors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>