force-app/main/default/objects/ClusterJobNeighbor__c/fields/ClusterJobResult__c.field-meta.xml
<CustomField>
    <fullName>ClusterJobResult__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cluster Job Result</label>
    <referenceTo>ClusterJobResult__c</referenceTo>
    <relationshipLabel>Cluster Job Nearest Neighbors</relationshipLabel>
    <relationshipName>Cluster_Job_Neighbors</relationshipName>
    <type>Lookup</type>
</CustomField>