force-app/main/default/objects/ClusterJobNeighbor__c/fields/NeighborRecordId__c.field-meta.xml
<CustomField>
    <fullName>NeighborRecordId__c</fullName>
    <label>Neighbor Record Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>